@@ -1,2 +1,2 @@
 
-Please visit http://lucene.apache.org/pylucene/documentation/install.html
+Please see doc/documentation/install.html
