@@ -1,2 +1,2 @@
 
-Please visit http://lucene.apache.org/pylucene/documentation/readme.html
+Please see doc/documentation/readme.html
